--- a/.github/workflows/E2E.yaml
+++ b/.github/workflows/E2E.yaml
@@ -60,15 +60,6 @@ jobs:
           }
           Add-Content -Path $env:GITHUB_OUTPUT -Value "githubOwner=$githubOwner"
           Write-Host "githubOwner=$githubOwner"
-          $scenarios = @(Get-ChildItem -path (Join-Path $ENV:GITHUB_WORKSPACE "e2eTests/scenarios/*/runtest.ps1") | ForEach-Object { $_.Directory.Name })
-          if ($scenarios.Count -le 1) {
-            Add-Content -Path $env:GITHUB_OUTPUT -Value "scenarios=[$($scenarios)]"
-            Write-Host "scenarios=[$($scenarios)]"
-          }
-          else {
-            Add-Content -Path $env:GITHUB_OUTPUT -Value "scenarios=$($scenarios -join ',')"
-            Write-Host "scenarios=$($scenarios -join ',')"
-          }
 
   SetupRepositories:
     runs-on: [ ubuntu-latest ]
@@ -88,18 +79,19 @@ jobs:
           $errorActionPreference = "STOP"
           . (Join-Path "." "e2eTests/SetupRepositories.ps1") -github -githubOwner '${{ needs.Check.outputs.githubowner }}' -token '${{ Secrets.OrgPAT }}' -bcContainerHelperVersion ${{ github.event.inputs.bcContainerHelperVersion }}
   
-  CalculateReleases:
+  Analyze:
     runs-on: [ ubuntu-latest ]
     needs: [ Check ]
     outputs:
-      releases: ${{ steps.calculatereleases.outputs.releases }}
+      releases: ${{ steps.Analyze.outputs.releases }}
+      scenarios: ${{ steps.Analyze.outputs.scenarios }}
     steps:
       - uses: actions/checkout@v3
         with:
           ref: ${{ github.event.inputs.ref }}
 
-      - name: CalculateReleases
-        id: calculateReleases
+      - name: Analyze
+        id: Analyze
         run: |
           $modulePath = Join-Path "." "e2eTests\e2eTestHelper.psm1" -resolve
           Import-Module $modulePath -DisableNameChecking
@@ -116,13 +108,22 @@ jobs:
           Write-Host "releases=$releasesJson"
           Add-Content -Path $env:GITHUB_OUTPUT -Value "releasesCount=$($releases.Count)"
           Write-Host "releasesCount=$($releases.Count)"
+          $scenarios = @(Get-ChildItem -path (Join-Path $ENV:GITHUB_WORKSPACE "e2eTests/scenarios/*/runtest.ps1") | ForEach-Object { $_.Directory.Name })
+          if ($scenarios.Count -le 1) {
+            Add-Content -Path $env:GITHUB_OUTPUT -Value "scenarios=[$($scenarios)]"
+            Write-Host "scenarios=[$($scenarios)]"
+          }
+          else {
+            Add-Content -Path $env:GITHUB_OUTPUT -Value "scenarios=$($scenarios -join ',')"
+            Write-Host "scenarios=$($scenarios -join ',')"
+          }
 
   Scenario:
     runs-on: [ ubuntu-latest ]
     needs: [ Check, SetupRepositories ]
     strategy:
       matrix:
-        scenario: ${{ fromJson(needs.Check.outputs.scenarios) }}
+        scenario: ${{ fromJson(needs.Analyze.outputs.scenarios) }}
       fail-fast: false
     steps:
       - uses: actions/checkout@v3
@@ -176,10 +177,10 @@ jobs:
 
   TestAlGoUpgrade:
     runs-on: [ ubuntu-latest ]
-    needs: [ Check, SetupRepositories, CalculateReleases ]
+    needs: [ Check, SetupRepositories, Analyze ]
     strategy:
       matrix:
-        release: ${{ fromJson(needs.CalculateReleases.outputs.releases) }}
+        release: ${{ fromJson(needs.Analyze.outputs.releases) }}
         type: [ 'appSourceApp', 'PTE' ]
       fail-fast: false
     steps:
