--- a/Actions/LoadProjects/action.yaml
+++ b/Actions/LoadProjects/action.yaml
@@ -5,6 +5,10 @@ inputs:
     description: Shell in which you want to run the action (powershell or pwsh)
     required: false
     default: powershell
+  parentTelemetryScopeJson:
+    description: Specifies the parent telemetry scope for the telemetry signal
+    required: false
+    default: '7b7d'
 outputs:
   ProjectsJson:
     description: An array of AL-Go projects in compressed JSON format
@@ -21,7 +25,7 @@ runs:
     - name: run
       shell: ${{ inputs.shell }}
       id: loadProjects
-      run: try { ${{ github.action_path }}/LoadProjects.ps1 -token ${{ github.token }} } catch { Write-Host "::Error::Unexpected error when running action ($($_.Exception.Message.Replace("`r",'').Replace("`n",' ')))"; exit 1 }
+      run: try { ${{ github.action_path }}/LoadProjects.ps1 -token ${{ github.token }} -parentTelemetryScopeJson ${{ inputs.parentTelemetryScopeJson }} } catch { Write-Host "::Error::Unexpected error when running action ($($_.Exception.Message.Replace("`r",'').Replace("`n",' ')))"; exit 1 }
 branding:
   icon: terminal
   color: blue
